# FletX

./: .gitignore  404.html  CONTRIBUTING.md  PYPI.md  README.md  __main__.py  index.html  main.py  mkdocs.yml  pyproject.toml  setup.py  setup_.py  sitemap.xml
.github/workflows/: deploy-docs.yml  lint-format.yml
CODE_OF_CONDUCT/: index.html
api-reference/: index.html
contributing/: index.html
docs/: CODE_OF_CONDUCT.md  contributing.md  index.md
docs/drafts/: fletxapp.md  fletxcli.md  fletxservice.md  index1.md
docs/getting-started/: architecture.md  controllers.md  dependency-injection.md  fletx-cli.md  installation.md  pages.md  routing.md  services.md  state-management.md
drafts/fletxapp/: index.html
drafts/fletxcli/: index.html
drafts/fletxrouter/: index.html
drafts/fletxservice/: index.html
drafts/index1/: index.html
examples/: main.py  routes.py
examples/1/: main.py  routes.py
examples/2/: counter.py  reactive_form.py
examples/3/: home.py  main.py
examples/pro/: README.md  main.py  pyproject.toml  requirements.txt
fletx/: __init__.py  __main__.py  app.py
fletx/cli/: __init__.py
fletx/core/: __init__.py  controller.py  effects.py  http.py  page.py  services.py  state.py  types.py  widget.py
fletx/decorators/: __init__.py  reactive.py  widgets.py
fletx/utils/: __init__.py  context.py  exceptions.py  logger.py
fletx/widgets/: __init__.py  text.py
getting-started/architecture/: index.html
getting-started/controllers/: index.html
getting-started/decorators/: index.html
search/: search_index.json
(+41 files in other folders)
