[project]
name = "FletXr"
version = "0.1.4.a0"
description = "The GetX-inspired Python Framework for Building Reactive, Cross-Platform Apps with Flet"
readme = "PYPI.md"
authors = [{ name = "#Einswilli", email = "einswilligoeh@email.com" }]
requires-python = "==3.12"
dependencies = [
    "aiohttp>=3.12.13",
    "build>=1.2.2.post1",
    "flet[all]>=0.28.3",
    "httpx>=0.28.1",
    "pydantic>=2.11.5",
    "setuptools>=80.8.0",
    "uvloop>=0.21.0",
]

[project.scripts]
fletx = "fletx.__main__:main"

[project.urls]
"source" = "https://alldotpy.github.io/FletX"
"Homepage" = "https://github.com/AllDotPy/FletX"

[project.optional-dependencies]
dev = [
    "black", 
    "mypy",
    "twine",
    "uv",
    "build",
    "pytest>=8.4.0", 
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.14",
    "mkdocs-static-i18n>=1.3.0",
]

[tool.setuptools]
packages = ["fletx"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
